samples/_failures_safe/1761043756_91f286_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aee36dc3.c: In function ‘main’:
./samples/SAFE/__tmp_aee36dc3.c:182:12: error: missing terminating " character
  182 |     printf("State Machine Demo - Enter events (0=START, 1=DATA_READY, 2=PROCESS_COMPLETE, 3=WRITE_COMPLETE, 4=ERROR
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_aee36dc3.c:182:5: error: expected expression at end of input
  182 |     printf("State Machine Demo - Enter events (0=START, 1=DATA_READY, 2=PROCESS_COMPLETE, 3=WRITE_COMPLETE, 4=ERROR
      |     ^~~~~~
./samples/SAFE/__tmp_aee36dc3.c:182:5: error: expected declaration or statement at end of input
